--- a/index.html
+++ b/index.html
@@ -104,18 +104,12 @@
   <!-- About Section -->
   <section class="pb-5" id="about">
 
-
-    <!-- About Img Phone & Tablet -->
-    <div class="col-sm-8 col-md-6 text-center mx-auto pt-5 about-img">
-      <img class="pt-2 mx-auto img-fluid rounded-circle" src="img/han-01.jpg" alt="about section image of hannah hatherell">
-    </div>
-
     <!-- About Img Desktop new -->
 
     <div class="container">
       <div class="row center pt-4">
           <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, <span class="intro-3 font-weight-bold">code</span> & <span class="intro-4 font-weight-bold">ride</span>.</h1>
-          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for platforms. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
+          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for web. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
         </div>
       </div>
     </div>
