update vis projects
broken link fixed

--- a/visual-projects.html
+++ b/visual-projects.html
@@ -247,7 +247,7 @@
                         <p>The skills I learned at CMG would set me up for future implementation of processes and systems. I was able to accomplish these key achievements:</p>
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4 pb-3">
-                          <img class="img-fluid" src="img/cmg/cmg-1.jpg">
+                          <img class="img-fluid" src="img/cmg/cmg-1.JPG">
                         </div>
                       </div>
                     </div>
