--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
 
   <!-- Custom fonts for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -36,7 +38,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3 font-weight-bold" href="index.html">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -49,22 +51,25 @@
             <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
+              <a class="dropdown-item nav-item" href="bonfire.html">Bonfire</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="visual-projects.html">Visual Projects</a>
-            </div>
-          </div>
-          <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</a>
-
-            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="graphic-design.html">Design</a>
-              <a class="dropdown-item nav-item" href="code.html">Code</a>
-              <a class="dropdown-item nav-item" href="illustration.html">Ride</a>
+              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="about.html">About</a>
+          </li>
+          <li class="list-inline-item ml-3 text-right" style="padding-top: 1px;">
+            <a class="connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
           </li>
         </ul>
       </div>
@@ -72,21 +77,78 @@
   </nav>
 
 
+  <!-- <section class="pb-5" id="about">
 
-  <!-- About Section -->
-  <section class="" id="about">
-
-
-    <!-- About Img Desktop new -->
+     About Img Desktop new
 
     <div class="container">
       <div class="row center pt-4">
-        <h1 class="text-left font-weight-bold">A little bit about myself.</h1>
-        <p>My name is Hannah Hatherell and I'm passionate about improving the lives of others through design. I'm constantly learning new things everyday and love meeting people who are motivated and unafraid of sharing their ideas with the world. I’m currently based in Ottawa, Canada.</p>
-        <p>I am well versed and schooled in photography, graphic, web and interaction design. I’ve learnt some of the processes, concepts and theories of UX/UI through attending workshops, conferences, webinars and reading blogs in my spare time at work. I have a strong passion for web development and challenge myself to continue cultivating this passion. I am very much a big-picture thinker and enjoy working on products end to end, from ideation all the way to development.</p>
-        <div class="pt-3 pb-0 mb-0 text-center">
-          <img class="img-fluid" src="img/han.jpg">
+          <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, <span class="intro-3 font-weight-bold">code</span> & <span class="intro-4 font-weight-bold">ride</span>.</h1>
+          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for web. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
         </div>
+      </div> -->
+
+    <!-- About Img Desktop old
+
+    <div class="container">
+      <div class="row pt-4">
+        <div class="col-lg-5 col-xl-5 about-img-desktop">
+          <div class="img-fluid"></div>
+        </div>
+        <div class="col-md-12 col-lg-7 col-xl-7">
+
+          <h1 class="text-left font-weight-bold">A little bit about myself.</h1>
+          <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, & <span class="intro-3 font-weight-bold">code</span>.</h1>
+          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for platforms. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
+        </div>
+      </div>
+    </div>
+
+
+  </section> -->
+
+<!-- Old h1
+        <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, <span class="intro-3 font-weight-bold">code</span> & <span class="intro-4 font-weight-bold">ride</span>.</h1>
+-->
+
+  <!-- About Section -->
+  <section id="about pt-0 mt-0">
+
+    <div class="center pt-5">
+      <img class="img-fluid pr-5 pl-5" src="img/han.jpg">
+    </div>
+    <!-- About Img Desktop new -->
+
+    <div class="container">
+      <div class="row center">
+        <div class="container pt-0">
+        <div class="row pt-5">
+          <div class="col-sm-6">
+          <h1 class="text-left font-weight-light"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">research</span>, <span class="intro-2" style="font-weight:800;">design</span> & <span class="intro-3" style="font-weight:800;">illustrate</span>.</h1>
+
+
+          </div>
+          <div class="col-sm-6 pb-3">
+            <p>I’m <span class="intro-0">Hannah Hatherell</span>, a designer based in Ottawa, Ontario. I play a critical role in leading visual and creative direction for marketing and communications teams. From concept to execution, I work to create engaging on-brand digital experiences across all channels that drive results through the use of visually compelling and effective designs.</p>
+            <ul class="list-inline mb-3">
+              <li class="list-inline-item">
+                <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
+              </li>
+              <li class="list-inline-item">
+                <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                      </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                        <i class="fas fa-envelope"></i>
+                      </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       </div>
     </div>
     </div>
@@ -104,7 +166,7 @@
         <h3 class="pb-5 pt-5 font-weight-bold">My values</h3>
         <div class="pb-4">
           <h4 class="font-weight-bold">📚 Always be learning.</h4>
-          <p>Humans are constant works in progress that need to receive feedback in order to grow. I am always looking at ways to challenge and improve myself, which is why in my spare time I like to participate in online courses, read blogs or books on subjects in my field and dabble in new projects.</p>
+          <p>Humans are constant works in progress that need to receive feedback in order to grow. I am always looking for ways to challenege and build on my skillset. I like to participate in online courses, read blogs or books on subjects in my field and dabble in new projects.</p>
         </div>
         <div class="pb-4">
           <h4 class="font-weight-bold">🤓 Work smarter, not harder.</h4>
@@ -112,7 +174,7 @@
         </div>
         <div class="pb-4">
           <h4 class="font-weight-bold">🎨 Embrace your creativity.</h4>
-          <p>Everyone needs a creative outlet of some sort - else, we'd go insane! When I'm not designing, I'm working on art in Procreate, commissions for <a class="link" href="http://hhillustrations.weebly.com" target="_blank">my micro-business</a> or exercising my film photography skills with my Pentax K1000.</p>
+          <p>Everyone needs a creative outlet of some sort - else, we'd go insane! I like to exercise my creativity through photography. I enjoy collecting vintage analogue cameras and capturing on film with them.</p>
         </div>
         <div class="pb-4">
           <h4 class="font-weight-bold">😌 Stay humble.</h4>
@@ -126,57 +188,39 @@
   <section class="recent-work pb-4">
 
     <div class="container">
-      <div class="row pt-4 center">
+      <div class="row pt-5 center">
         <h3 class="pb-5 pt-5 font-weight-bold">Testimonials</h3>
         <div class="pb-4">
-          <p>In 2021 Hannah has made a substantial contribution to the Marketing and Communications team. Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time that I have, I have felt and seen her
+          <p><span style="font-weight: 400;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time that I have, I have felt and seen her
             impact. I continue to be impressed by the work that she produces. Her attention to detail and the time she takes to inform her decisions shows her commitment to her work. Hannah has a positive attitude and willingness to taking on new initiatives,
             she is someone I trust and can rely on.</p>
           <p>Hannah has a genuine enthusiasm in her work and is very invested in contributing to our company’s success. Her dedication to her work, and creative vision makes Hannah a valuable contributor to the team.</p>
           <br>
           <p class="text-right font-weight-bold pb-0 mb-0">—Kristina Henrikson</p>
-          <p class="text-right">Manager, Marketing and Communications at Canadian Science Publishing</p>
+          <p class="text-right caption">Manager, Marketing and Communications at Canadian Science Publishing</p>
         </div>
         <div class="pb-4 pt-5">
-          <p>It’s my pleasure to recommend my former lead graphic designer, Hannah Hatherell.</p>
+          <p style="font-weight: 400;">It’s my pleasure to recommend my former lead graphic designer, Hannah Hatherell.</p>
           <p>Hannah worked for me as the lead Graphic Designer at Coyle Media Group for a year. During that time, I was impressed by her overall performance, particularly in her knowledge of InDesign, Illustrator, photoshop and WordPress. Hannah consistently
             worked hard to achieve Result for our team, she was assigned with the task of designing multiple high-end magazines along with websites, print ads, digital ads and some photography.</p>
           <p>Hannah is a reliable and talented Graphic Designer and a joy to work with who doesn’t hesitate to help her co-workers. She is an excellent communicator and a pleasure to work with. I’m confident Hannah will be a great asset to your team, just
             as she was to ours.</p>
           <br>
           <p class="text-right font-weight-bold pb-0 mb-0">—Jon Hudon</p>
-          <p class="text-right pb-2">Media Design Manager at Coyle Media Group</p>
+          <p class="text-right pb-2 caption">Media Design Manager at Coyle Media Group</p>
         </div>
   </section>
 
 
-  <div class="bb-full mb-5 pt-5"></div>
+  <div class="bb-full mb-3"></div>
 
 
   <!-- More -->
 
 
-  <section class="pb-5">
-    <div class="container">
-    <p class="font-weight-bold text-center">More about me</p>
-      <div class="row pt-4 pb-4">
-        <div class="col-sm-4 col-md-4 col-lg-4 pb-2">
-        <a href="code.html"><img class="img-fluid project" src="img/code.jpg"></a>
-        </div>
-        <div class="col-sm-4 col-md-4 col-lg-4 pb-2">
-          <a href="graphic-design.html"><img class="img-fluid project" src="img/design.jpg"></a>
-        </div>
-        <div class="col-sm-4 col-md-4 col-lg-4 pb-2">
-          <a href="illustration.html"><img class="img-fluid project" src="img/ride.jpg"></a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
   <footer id="connect" class="footer center text-center pb-3 pt-5" id="footer">
     <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's connect</h5>
+      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
       <p>Get in touch for opportunities or just to say hi! 👋</p>
       <ul class="list-inline mb-3">
         <li class="list-inline-item">
@@ -194,7 +238,7 @@
   </footer>
 
   <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2022 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
   </div>
   </div>
 
