--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
   <!-- Custom fonts for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -36,7 +38,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3 font-weight-bold" href="index.html">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -49,22 +51,25 @@
             <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
+              <a class="dropdown-item nav-item" href="bonfire.html">Bonfire</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="visual-projects.html">Visual Projects</a>
-            </div>
-          </div>
-          <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</a>
-
-            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="graphic-design.html">Design</a>
-              <a class="dropdown-item nav-item" href="code.html">Code</a>
-              <a class="dropdown-item nav-item" href="illustration.html">Ride</a>
+              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="about.html">About</a>
+          </li>
+          <li class="list-inline-item ml-3 text-right" style="padding-top: 1px;">
+            <a class="connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
           </li>
         </ul>
       </div>
@@ -102,47 +107,95 @@
 </section>-->
 
   <!-- About Section -->
-  <section class="pb-5" id="about">
 
-    <!-- About Img Desktop new -->
-
-    <div class="container">
-      <div class="row center pt-4">
-          <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, <span class="intro-3 font-weight-bold">code</span> & <span class="intro-4 font-weight-bold">ride</span>.</h1>
-          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for web. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- About Img Desktop old
-
-    <div class="container">
-      <div class="row pt-4">
-        <div class="col-lg-5 col-xl-5 about-img-desktop">
-          <div class="img-fluid"></div>
-        </div>
-        <div class="col-md-12 col-lg-7 col-xl-7">
-
-
-          <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, & <span class="intro-3 font-weight-bold">code</span>.</h1>
-          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for platforms. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
-        </div>
-      </div>
-    </div> -->
-
-
-  </section>
 
 
   <!-- RECENT WORK -->
 
-  <section class="recent-work pb-4" id="recent-work">
+
+  <section class="pt-5 mt-5">
+    <div class="container center">
+      <div>
+        <h5 class="pt-4 mt-5 pl-4 pr-4 text-center" style="line-height: 32px; font-size: 30px; font-weight: 200;">Hello 👋 I am an experienced designer with a strategic background in marketing communications, who is passionate about improving the lives of others through design.</h5>
+        </div>
+      </div>
+    </section>
+
+  <div class="container pt-5">
+  <div class="row pt-5">
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="euna.html">
+        <img class="img-fluid project" src="img/euna.png">
+      </a>
+    </div>
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="bonfire.html">
+        <img class="img-fluid project" src="img/bonfire.png">
+      </a>
+    </div>
+  <div class="w-100"></div>
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="questica.html">
+        <img class="img-fluid project" src="img/questica.png">
+      </a>
+    </div>
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="opencounter.html">
+        <img class="img-fluid project" src="img/opencounter.png">
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
+        <img class="img-fluid project" src="img/mpvr.png">
+      </a>
+    </div>
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="csp.html">
+        <img class="img-fluid project" src="img/csp.png">
+      </a>
+    </div>
+  <div class="w-100"></div>
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="cmg.html">
+        <img class="img-fluid project" src="img/cmg.png">
+      </a>
+    </div>
+    <div class="col-sm-6">
+      <a class="d-block mx-auto mb-4" href="canopy.html">
+        <img class="img-fluid project" src="img/canopy.png">
+      </a>
+    </div>
+    <div class="w-100"></div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="hhi.html">
+          <img class="img-fluid project" src="img/hhi.png">
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="various.html">
+          <img class="img-fluid project" src="img/various.png">
+        </a>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+  <!-- <section class="recent-work pb-4" id="recent-work">
 
       <div class="container">
         <div class="row pt-4 center">
 
 
           <p>MY RECENT WORK</p>
+
+
 
           <div class="">
             <a class="d-block mx-auto mb-4" href="csp.html">
@@ -159,7 +212,7 @@
               <img class="img-fluid project" src="img/vis.jpg">
             </a>
           </div>
-        </section>
+        </section> -->
 
 
 
@@ -535,7 +588,7 @@
   </footer>-->
 
 
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
+  <footer id="connect" class="footer center text-center pt-5 pb-3" id="footer">
     <div class="container">
       <h5 class="font-weight-bold mb-3">Let's connect</h5>
         <p>Get in touch for opportunities or just to say hi! 👋</p>
@@ -554,7 +607,7 @@
   </footer>
 
   <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2022 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
   </div>
   </div>
 
