--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -17,7 +17,9 @@
 
   <!-- Custom fonts for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -36,7 +38,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3 font-weight-bold" href="index.html">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -49,22 +51,25 @@
             <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
+              <a class="dropdown-item nav-item" href="bonfire.html">Bonfire</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="visual-projects.html">Visual Projects</a>
-            </div>
-          </div>
-          <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</a>
-
-            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="graphic-design.html">Design</a>
-              <a class="dropdown-item nav-item" href="code.html">Code</a>
-              <a class="dropdown-item nav-item" href="illustration.html">Ride</a>
+              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="about.html">About</a>
+          </li>
+          <li class="list-inline-item ml-3 text-right" style="padding-top: 1px;">
+            <a class="connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
           </li>
         </ul>
       </div>
@@ -86,18 +91,19 @@
       <div class="container center pb-5">
         <div class="pb-2">
           <h2 class="pb-0 mb-2" style="font-size: 36px;">MasterpieceVR</h2>
-          <p class="text-uppercase" style="font-size: 14px;">Annotation in virtual reality</p>
+          <p style="font-size: 14px; font-weight: 400;">User Experience & Interface | Feature Design</p>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-8 col-xl-8">
-              <p class="gray">OVERVIEW</p>
+              <p class="gray" style="font-weight: 600;">OVERVIEW</p>
               <p>MasterpieceVR (MPVR) was seeking a solution to meet the needs of a simple and easy-to-use annotation system that utilized cutting-edge industry tools. Working with MasterpieceVR involved designing and developing an aesthetically-pleasing and highly functional way for users to annotate their internal and external 3D creations.</p>
             </div>
             <div class="col-sm-12 col-md-4 col-xl-4">
-              <p class="gray">ROLE</p>
+              <p class="gray" style="font-weight: 600;">ROLE</p>
+              <span style="font-size: 13px;">
               <p class="font-weight-bold mb-2">Lead UX Designer</p>
-              <p>User Research, Interaction, Visual design, Prototyping & Testing</p><br>
-              <p>June 2018 - September 2018</p>
+              <p>User Research, Interaction, Visual design, Prototyping & User Testing</p>
+            </span>
             </div>
           </div>
         </div>
@@ -156,7 +162,7 @@
             <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Developing a process</h4>
             <p>We had a three month window to deliver our solution. To effectively kick off our project, we ran five day design sprint following Jake Knapp's process in The Sprint Book. Using this sprint method we could accelerate our approach towards innovating and solving our problem.</p>
             <div class="text-center pt-3">
-              <img class="img-fluid project" src="img/mpvr/sprint.png">
+              <img class="img-fluid" src="img/mpvr/sprint.png">
             </div>
 
             <p class="font-weight-bold mb-0 pt-5">Day 1: Map</p>
@@ -225,15 +231,15 @@
             <div class="bb mb-5 pt-5"></div>
 
 
-  <section class="pb-5">
+  <section class="pb-0">
     <div class="container">
-      <p class="font-weight-bold text-center">More projects</p>
+      <p class="font-weight-bold text-center">More Projects</p>
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="csp.html"><img class="img-fluid project" src="img/csp.jpg"></a>
+          <a href="opencounter.html"><img class="img-fluid project" src="img/opencounter.png"></a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-            <a href="visual-projects.html"><img class="img-fluid project" src="img/vis.jpg"></a>
+            <a href="csp.html"><img class="img-fluid project" src="img/csp.png"></a>
           </div>
         </div>
     </div>
@@ -244,7 +250,7 @@
 
   <footer id="connect" class="footer center text-center pb-3" id="footer">
     <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's connect</h5>
+      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
         <p>Get in touch for opportunities or just to say hi! 👋</p>
           <ul class="list-inline mb-3">
             <li class="list-inline-item">
@@ -261,7 +267,7 @@
   </footer>
 
   <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2022 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
   </div>
   </div>
 
