--- a/csp.html
+++ b/csp.html
@@ -17,7 +17,9 @@
 
   <!-- Custom fonts for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -36,7 +38,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3 font-weight-bold" href="index.html">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -49,22 +51,25 @@
             <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
+              <a class="dropdown-item nav-item" href="bonfire.html">Bonfire</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="visual-projects.html">Visual Projects</a>
-            </div>
-          </div>
-          <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</a>
-
-            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="graphic-design.html">Design</a>
-              <a class="dropdown-item nav-item" href="code.html">Code</a>
-              <a class="dropdown-item nav-item" href="illustration.html">Ride</a>
+              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
+              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="about.html">About</a>
+          </li>
+          <li class="list-inline-item ml-3 text-right" style="padding-top: 1px;">
+            <a class="connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
           </li>
         </ul>
       </div>
@@ -85,18 +90,19 @@
       <div class="container center pb-5">
         <div class="pb-2">
           <h2 class="pb-0 mb-2" style="font-size: 36px;">Canadian Science Publishing</h2>
-          <p class="text-uppercase" style="font-size: 14px;">Sales & marketing strategy platform design</p>
+          <p style="font-size: 14px; font-weight: 400;">Sales & Marketing Strategy | Platform Design</p>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-8 col-xl-8">
-              <p class="gray">OVERVIEW</p>
+              <p class="gray" style="font-weight: 600;">OVERVIEW</p>
               <p>After Canadian Science Publishing (CSP) rebranded, they needed a design solution to promote their new identity to current and potential institutions. In addition, CSP needed a reliable system to gather data and measure performance. The goal of this project was to research and implement a design solution that enabled marketing to promote CSP’s brand identity, track campaign performance and use that data to inform future sales and marketing decisions.</p>
             </div>
             <div class="col-sm-12 col-md-4 col-xl-4">
-              <p class="gray">ROLE</p>
+              <p class="gray" style="font-weight: 600;">ROLE</p>
+              <span style="font-size: 13px;">
               <p class="font-weight-bold mb-2">Graphic Designer</p>
-              <p>User Research, Interaction, Visual design, Front-end web design, Prototyping & Testing</p><br>
-              <p class="mb-0">June 2020 - ongoing</p>
+              <p>User Research, Interaction, Visual Design, Front-end Web Design, Prototyping & Testing</p>
+            </span>
             </div>
           </div>
         </div>
@@ -109,7 +115,7 @@
       <div class="pb-2">
         <h4 class="pb-3 font-weight-bold">Background</h4>
         <p class="pb-3">Canadian Science Publishing is an Ottawa-based not-for-profit scholarly publisher that provides access to their suite of scientific journals through paid and open access subscriptions. <a href="https://cdnsciencepub.com" target="_blank" class="link">Learn more about Canadian Science Publishing here.</a></p>
-        <h4 class="pb-3">I am the whole design team at CSP.</h4>
+        <h4 class="pb-3">I was the whole design team at CSP.</h4>
         <p>I joined CSP as a graphic designer two years ago in a company of over 40 scientific publishing editors, editorial assistants and managing editors. I support UX and UI across every aspect of CSP's business and am responsible for leading visual design and branding across key parts of the corporate website, Wordpress blog site, social media and communications.</p>
         <p>I've grown tremendously in the last two years, some key achievements of which I have listed below:</p>
           <ul>
@@ -127,7 +133,7 @@
     <section class="pt-5 pb-5">
       <div class="container center">
         <div>
-          <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Understanding the problem</h4>
+          <h4 class="pt-3 pb-3 mb-0 font-weight-bold">Understanding the problem</h4>
           <p>When I joined the team, there was no solution in place for marketing to measure performance metrics of sales-specific campaigns. As a result, there was no way for marketing to know if these campaigns were successful. This caused a gap between marketing and sales because marketing could not report on current and past campaigns or inform future campaigns using data. It also meant that marketing could not support sales to its fullest extent.</p>
           <p>My research encompassed:</p>
           <ul>
@@ -140,7 +146,7 @@
     </section>
 
 
-    <section class="pt-5 pb-5 bg-lt-blue">
+    <section class="pt-3 pb-5 bg-lt-blue">
       <div class="container center">
         <div class="pb-2">
           <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Gathering insights</h4>
@@ -156,7 +162,7 @@
       </section>
 
 
-      <section class="pt-5">
+      <section class="pt-4">
         <div class="container center pb-5">
           <div class="pb-2">
             <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Preliminary designs</h4>
@@ -208,7 +214,7 @@
           </section>
 
 
-        <section class="pt-5 bg-lt-blue">
+        <section class="pt-3 bg-lt-blue">
           <div class="container center pb-5">
             <div class="pb-2">
               <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Wireframing the solution</h4>
@@ -228,7 +234,7 @@
 
 
 
-        <section class="pt-5 pb-5">
+        <section class="pt-3 pb-3">
           <div class="container center">
             <div class="pb-5">
               <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
@@ -240,25 +246,25 @@
                 <li class="pb-3"><span class="font-weight-bold">Involve sales upfront.</span> This helps to reduce any rework later on as an understanding of the technical limitations upfront will help to inform your design strategy.</li>
               </ul>
 
-              <a class="d-inline" href="http://info.cdnsciencepub.com/journals-catalogue" target="_blank"><button type="button" class="btn btn-primary font-weight-light">See the final product</button></a>
+              <a class="d-inline" href="http://info.cdnsciencepub.com/journals-catalogue" target="_blank"><button type="button" class="btn btn-primary font-weight-light">See the Landing Page</button></a>
 
-              <a class="d-inline" href="https://www.flipsnack.com/cdnsciencepub/2022-journals-catalogue/full-view.html" target="_blank"><button type="button" class="btn btn-primary font-weight-light">See the digital flipbook</button></a>
+              <a class="d-inline" href="https://www.flipsnack.com/cdnsciencepub/2022-journals-catalogue/full-view.html" target="_blank"><button type="button" class="btn btn-primary font-weight-light">See the Digital Flipbook</button></a>
             </div>
           </div>
           </section>
 
-          <div class="bb mb-5 pt-5"></div>
+          <div class="bb mb-5 pt-0"></div>
 
 
-          <section class="pb-5">
+          <section class="pb-0">
             <div class="container">
-              <p class="font-weight-bold text-center">More projects</p>
+              <p class="font-weight-bold text-center">More Projects</p>
               <div class="row pt-4 pb-2">
                 <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                  <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.jpg"></a>
+                  <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.png"></a>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                    <a href="visual-projects.html"><img class="img-fluid project" src="img/vis.jpg"></a>
+                    <a href="cmg.html"><img class="img-fluid project" src="img/cmg.png"></a>
                   </div>
                 </div>
             </div>
@@ -287,7 +293,7 @@
   </footer>
 
   <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2022 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
   </div>
   </div>
 
