jan 19 about update
updated about page description

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
 
           </div>
           <div class="col-sm-6 pb-3">
-            <p>I’m <span class="intro-0">Hannah Hatherell</span>, a designer based in Ottawa, Ontario. I play a critical role in leading visual and creative direction for marketing and communications teams. From concept to execution, I work to create engaging on-brand digital experiences across all channels that drive results through the use of visually compelling and effective designs.</p>
+            <p>I’m <span class="intro-0">Hannah Hatherell</span>, a designer based in Ottawa, Ontario. I play a crucial role in leading, supporting and problem-solving visual and creative initiatives for marketing and communications teams. I work to create engaging on-brand user experiences across all channels, from concept to execution. My goal is to drive results through visually compelling and effective design solutions.</p>
             <ul class="list-inline mb-3">
               <li class="list-inline-item">
                 <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
